fix: Fix overflow of CODE full form in small screens

--- a/output.css
+++ b/output.css
@@ -544,17 +544,11 @@ video {
 .left-2 {
   left: 0.5rem;
 }
-.left-5 {
-  left: 1.25rem;
-}
 .top-0 {
   top: 0px;
 }
 .top-2 {
   top: 0.5rem;
-}
-.top-3 {
-  top: 0.75rem;
 }
 .top-52 {
   top: 13rem;
@@ -662,152 +656,23 @@ video {
 .gap-5 {
   gap: 1.25rem;
 }
-.border-b-\[5px\] {
-  border-bottom-width: 5px;
+.border-b-\[70px\] {
+  border-bottom-width: 70px;
 }
 .border-l {
   border-left-width: 1px;
 }
-.border-l-0 {
-  border-left-width: 0px;
-}
-.border-t-\[54px\] {
-  border-top-width: 54px;
-}
-.border-b-\[54px\] {
-  border-bottom-width: 54px;
-}
-.border-r-\[93\.5px\] {
-  border-right-width: 93.5px;
-}
-.border-r-8 {
-  border-right-width: 8px;
-}
-.border-r-\[100px\] {
-  border-right-width: 100px;
-}
-.border-r-\[10px\] {
-  border-right-width: 10px;
-}
-.border-r-\[40px\] {
-  border-right-width: 40px;
-}
-.border-r-\[10rem\] {
-  border-right-width: 10rem;
-}
-.border-r-\[2rem\] {
-  border-right-width: 2rem;
-}
-.border-r-\[3rem\] {
-  border-right-width: 3rem;
-}
-.border-r-\[4rem\] {
-  border-right-width: 4rem;
-}
-.border-r-\[5rem\] {
-  border-right-width: 5rem;
-}
-.border-t-\[1rem\] {
-  border-top-width: 1rem;
-}
-.border-t-\[4rem\] {
-  border-top-width: 4rem;
-}
-.border-t-\[0rem\] {
-  border-top-width: 0rem;
-}
-.border-t-\[10rem\] {
-  border-top-width: 10rem;
-}
-.border-t-\[5rem\] {
-  border-top-width: 5rem;
-}
-.border-t-\[3rem\] {
-  border-top-width: 3rem;
-}
-.border-t-\[2rem\] {
-  border-top-width: 2rem;
-}
-.border-r-\[6rem\] {
-  border-right-width: 6rem;
-}
-.border-r-\[1rem\] {
-  border-right-width: 1rem;
-}
-.border-b-\[50px\] {
-  border-bottom-width: 50px;
-}
-.border-t-\[50px\] {
-  border-top-width: 50px;
-}
-.border-r-\[100vh\] {
-  border-right-width: 100vh;
-}
-.border-r-\[150px\] {
-  border-right-width: 150px;
-}
-.border-r-\[0px\] {
-  border-right-width: 0px;
-}
-.border-r-\[1px\] {
-  border-right-width: 1px;
-}
-.border-r-\[5px\] {
-  border-right-width: 5px;
-}
-.border-t-\[100px\] {
-  border-top-width: 100px;
-}
-.border-t-\[600px\] {
-  border-top-width: 600px;
-}
-.border-t-\[60px\] {
-  border-top-width: 60px;
-}
-.border-r-\[15px\] {
-  border-right-width: 15px;
-}
-.border-r-\[55px\] {
-  border-right-width: 55px;
-}
-.border-t-\[65px\] {
-  border-top-width: 65px;
-}
-.border-t-\[64px\] {
-  border-top-width: 64px;
-}
-.border-t-\[66px\] {
-  border-top-width: 66px;
+.border-r-\[50px\] {
+  border-right-width: 50px;
 }
 .border-t-\[70px\] {
   border-top-width: 70px;
 }
-.border-r-\[60px\] {
-  border-right-width: 60px;
-}
-.border-r-\[90px\] {
-  border-right-width: 90px;
-}
-.border-b-\[70px\] {
-  border-bottom-width: 70px;
-}
-.border-r-\[50px\] {
-  border-right-width: 50px;
-}
-.border-solid {
-  border-style: solid;
-}
 .border-dashed {
   border-style: dashed;
 }
-.border-dotted {
-  border-style: dotted;
-}
 .border-b-transparent {
   border-bottom-color: transparent;
-}
-.border-l-transparent {
-  border-left-color: transparent;
 }
 .border-r-secondary-50 {
   --tw-border-opacity: 1;
@@ -815,13 +680,6 @@ video {
 }
 .border-t-transparent {
   border-top-color: transparent;
-}
-.border-r-black {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-.border-r-\[100\%\] {
-  border-right-color: 100%;
 }
 .bg-primary-500 {
   --tw-bg-opacity: 1;
@@ -831,10 +689,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(239 80 7 / var(--tw-bg-opacity));
 }
-.bg-primary-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(157 48 15 / var(--tw-bg-opacity));
-}
 .bg-secondary-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(18 18 18 / var(--tw-bg-opacity));
@@ -842,10 +696,6 @@ video {
 .bg-secondary-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(6 5 11 / var(--tw-bg-opacity));
-}
-.bg-primary-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(198 58 8 / var(--tw-bg-opacity));
 }
 .object-cover {
   -o-object-fit: cover;
@@ -877,10 +727,6 @@ video {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
 .font-poppins {
   font-family: Poppins, sans-serif;
 }
@@ -896,10 +742,6 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -911,6 +753,10 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .font-black {
   font-weight: 900;
@@ -954,4 +800,11 @@ video {
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+@media (min-width: 400px) {
+
+  .min-\[400px\]\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
